--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -46,89 +46,89 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-        <!--        <div class="center center--wrapper"><h1 class="text-align:center">Connected Cards</h1></div>-->
-<div class="connected-cards__container pull-up">
-<div class="base-card__body">
-                <h2 class="base-card__title"><a>getting a good deal</a></h2>
+  <!--        <div class="center center--wrapper"><h1 class="text-align:center">Connected Cards</h1></div>-->
+  <div class="connected-cards__container pull-up">
+    <div class="base-card__body">
+      <h2 class="base-card__title"><a>getting a good deal</a></h2>
 
-                                <h3 class="base-card__subtitle">objective</h3>
+      <h3 class="base-card__subtitle">objective</h3>
 
-                                <p class="base-card__paragraph">The industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="base-card__paragraph">The industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-                                <div class="base-card__cluster">
-                                    <div class="cluster-box">Laws, regulations and contracts</div>
-                                    <div class="cluster-box">Award of licenses</div>
-                                    <div class="cluster-box">Economic linkages</div>
-                                    <div class="cluster-box">State-owned enterprises</div>
-                                    <div class="cluster-box">Tax systems</div>
-                                    </div>
+      <div class="base-card__cluster">
+        <div class="cluster-box">Laws, regulations and contracts</div>
+        <div class="cluster-box">Award of licenses</div>
+        <div class="cluster-box">Economic linkages</div>
+        <div class="cluster-box">State-owned enterprises</div>
+        <div class="cluster-box">Tax systems</div>
+      </div>
 
-<div class="nrgi-impact-tag custom-tag">
+      <div class="nrgi-impact-tag custom-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
         <p>Contract transparency in Mexico</p>
       </div>
 
-            <div class="connected-cards__img-bottom">
-                <img src="images/bring-change.jpg" alt="a">
-            </div>
+      <div class="connected-cards__img-bottom">
+        <img src="images/bring-change.jpg" alt="a">
+      </div>
     </div>
-<div class="base-card__body">
-                <h2 class="base-card__title"><a>managing revenues</a></h2>
+    <div class="base-card__body">
+      <h2 class="base-card__title"><a>managing revenues</a></h2>
 
-                                <h3 class="base-card__subtitle">objective</h3>
+      <h3 class="base-card__subtitle">objective</h3>
 
-                                <p class="base-card__paragraph">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+      <p class="base-card__paragraph">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-    <div class="base-card__cluster">
-                                    <div class="cluster-box">Fiscal rules</div>
-                                    <div class="cluster-box">Dept</div>
-                                    <div class="cluster-box">State-owned enterprises</div>
-    </div>
+      <div class="base-card__cluster">
+        <div class="cluster-box">Fiscal rules</div>
+        <div class="cluster-box">Dept</div>
+        <div class="cluster-box">State-owned enterprises</div>
+      </div>
 
-<div class="nrgi-impact-tag custom-tag">
+      <div class="nrgi-impact-tag custom-tag">
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
         <p>Contract transparency in Mexico</p>
       </div>
-            <div class="connected-cards__img-bottom">
-                <img src="images/bring-change.jpg" alt="a">
-            </div>
+      <div class="connected-cards__img-bottom">
+        <img src="images/bring-change.jpg" alt="a">
+      </div>
     </div>
+  </div>
+  <div class="connected-cards__container margin-top">
+
+    <div class="base-card__body padding-top">
+      <h2 class="base-card__title"><a>getting a good deal</a></h2>
+
+      <h3 class="base-card__subtitle">objective</h3>
+
+      <p class="base-card__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
+      <div class="base-card__cluster">
+        <div class="cluster-box">Strategic minerals</div>
+        <div class="cluster-box">"Stranded assets"</div>
+      </div>
+
+
+      <div class="connected-cards__img-top">
+        <img src="images/bring-change.jpg" alt="a">
+      </div>
     </div>
-    <div class="connected-cards__container margin-top">
+    <div class="base-card__body padding-top">
+      <h2 class="base-card__title"><a>getting a good deal</a></h2>
 
-<div class="base-card__body padding-top">
-                <h2 class="base-card__title"><a>getting a good deal</a></h2>
+      <h3 class="base-card__subtitle">objective</h3>
 
-                                                <h3 class="base-card__subtitle">objective</h3>
+      <p class="base-card__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
 
-                                                <p class="base-card__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-
-                                <div class="base-card__cluster">
-                                    <div class="cluster-box">Strategic minerals</div>
-                                    <div class="cluster-box">"Stranded assets"</div>
-                                    </div>
-
-
-            <div class="connected-cards__img-top">
-                <img src="images/bring-change.jpg" alt="a">
-            </div>
+      <div class="base-card__cluster">
+        <div class="cluster-box">"Corruption Risks"</div>
+        <div class="cluster-box">"State capture by elites"</div>
+      </div>
+      <div class="connected-cards__img-top">
+        <img src="images/bring-change.jpg" alt="a">
+      </div>
     </div>
-<div class="base-card__body padding-top">
-                <h2 class="base-card__title"><a>getting a good deal</a></h2>
-
-                                                <h3 class="base-card__subtitle">objective</h3>
-
-                                                <p class="base-card__paragraph">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-
-                                <div class="base-card__cluster">
-                                    <div class="cluster-box">"Corruption Risks"</div>
-                                    <div class="cluster-box">"State capture by elites"</div>
-                                    </div>
-            <div class="connected-cards__img-top">
-                <img src="images/bring-change.jpg" alt="a">
-            </div>
-    </div>
-    </div>
+  </div>
 </section>
 
 <section class="text-section">
@@ -164,9 +164,9 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-  <div class="center center--wrapper">
-    <h1 class="text-align:center">Map</h1>
-  </div>
+    <div class="center">
+      <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
+    </div>
 </section>
 
 <section class="text-section">
