--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -45,8 +45,19 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section">
-  <!--        <div class="center center--wrapper"><h1 class="text-align:center">Connected Cards</h1></div>-->
+<section class="base-section connected-cards__section">
+
+  <div class="connected-lines__container">
+    <div class="connected-lines__wrapper">
+      <div class="connected-lines-straight"></div>
+      <div class="connected-lines-straight float-right"></div>
+      <div class="connected-lines line-top-left"></div>
+      <div class="connected-lines line-top-right"></div>
+      <div class="connected-lines line-bottom-left"></div>
+      <div class="connected-lines line-bottom-right"></div>
+    </div>
+  </div>
+
   <div class="connected-cards__container pull-up">
     <div class="base-card__body">
       <h2 class="base-card__title"><a>getting a good deal</a></h2>
@@ -164,9 +175,9 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-    <div class="center">
-      <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
-    </div>
+  <div class="center">
+    <img src="/images/nrgi-worldmap-where-we-work.svg" alt="nrgi-worlmap">
+  </div>
 </section>
 
 <section class="text-section">
