--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -157,8 +157,149 @@ layout: layouts/base.njk
 </section>
 
 <section class="base-section">
-  <div class="center center--wrapper">
-    <h1 class="text-align:center">Cards</h1>
+
+  <input type="checkbox" id="modal_multiple"/>
+
+  <div class="modal">
+    <div class="modal-content">
+
+      <label style="color: #ff5638; font-size: 30px">Multiple modes of engagement</label>
+
+      <p>NRGI is one many actors working in concert to advence natural resource governance. NGRI delivers applied research, data and analysis, policy advocacy, capacity development, and technical assistance, and serves as a convener of actors working toward reform.</p>
+      <p>We focus those intervetions on specific areas of the extractive industries decision chain. Other actors undertake complementary work in development, rule of law and governance, and on other aspects of the  decision chain; their work suports and reinforces our  own.</p>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Resource Governance Index drives reform</p>
+      </div>
+    </div>
+
+    <label class="modal-close" for="modal_multiple"></label>
+  </div>
+
+  <input type="checkbox" id="modal_national" />
+
+  <div class="modal">
+    <div class="modal-content">
+
+      <label style="color: #ff5638; font-size: 30px">National players</label>
+
+      <p>At the national, NRGI partners with agents of change who are best placed to work in alliance to effect particular policy reforms.</p>
+      <p>we address asymmetries of information, acess and capacity, and build trust between actors.</p>
+      <p><strong>We emphasize the importance of building the credibility and resilience of civil society organizations, who inform policy reform by serving as intermediaries and amplifiers of citizens' voices and priorities. By building links between accountability actors, including civil society, oversight actors (e.g., parliamentary committees and supreme audit institutions) and the media, we furtherincentivize and sustain reform efforts.</strong></p>
+      <p>By building links between accountability actors, including civil society organizations, oversght actord (e.g., parliamentary committees and supreme audit institutions) and media, we further incentivize and sustain reform efforts </p>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Guinea's road improved mining governance</p>
+      </div>
+    </div>
+
+    <label class="modal-close" for="modal_national"></label>
+  </div>
+
+  <input type="checkbox" id="modal_international" />
+
+  <div class="modal">
+    <div class="modal-content">
+
+      <label style="color: #ff5638; font-size: 30px">International players</label>
+
+      <p>At the international level, NRGI engages external influencers which are predisposed to receive and adopt NRGI's evidence-based messaging.</p>
+      <p>We work with influential states, regional bodies, multilateral organizations, multi-stakeholder iniatives, and industry actors to develop international norms and standards.</p>
+      <p>Policymakers and companies respond to these international cues defining expected and deserable practice, and then signal their intentions and improve their reputations through their policies and commitments.</p>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>A strengthened EITI standard</p>
+      </div>
+    </div>
+
+    <label class="modal-close" for="modal_international"></label>
+  </div>
+
+  <input type="checkbox" id="modal_maximization" />
+
+  <div class="modal">
+    <div class="modal-content">
+
+      <label style="color: #ff5638; font-size: 30px">Maximization of benefits, reduction of harms</label>
+
+      <p>Governments that implement policies in line with good practice and citizen prioritie will likely increase benefits and reduce harms from the sector.</p>
+      <p>Benefits include the availability of revenues for public services and social spending, helping to lift citizens out of poverty, as well increased dialogue and accountability. Harms include the direct impacts of extraction (e.g., corruption, conflict and social and environmental effects), growing inequality, and negative gender-differentiated impacts.</p>
+      <p>For direct interventions on sustainable and inclusive development polices, NRGI will rely on the broader ecosystem of actors working on governance and development.</p>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Resource Governance Index drives reform</p>
+      </div>
+    </div>
+
+    <label class="modal-close" for="modal_maximization"></label>
+  </div>
+
+  <div class="connected-cards__container pull-up">
+    <div class="base-card__body base-cards">
+      <h2 class="base-card__title"><a>Multiple modes of engagement</a></h2>
+
+      <p class="base-card__paragraph">The industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+
+      <div class="nrgi-impact-tag custom-tag margin-top-multiple">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Resource Governance Index drives reform</p>
+      </div>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <label class="highlights-button" for="modal_multiple" style="color: #ff5638;">LEARN MORE</label>
+      </div>
+    </div>
+
+    <div class="base-card__body base-cards">
+      <h2 class="base-card__title"><a>National players</a></h2>
+
+
+      <p class="base-card__paragraph">We works with agents of change based on an analysis of which actors are best placed to workin alliance to effect particular policy reforms in a country. We address asymmetries of information, acess and capacity, and build trust between actors.</p>
+
+      <div class="nrgi-impact-tag custom-tag margin-top-national">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>Guinea's road improved mining governance</p>
+      </div>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <label class="highlights-button" for="modal_national" style="color: #ff5638;">LEARN MORE</label>
+      </div>
+
+    </div>
+  </div>
+  <div class="connected-cards__container margin-cards-top">
+
+    <div class="base-card__body padding-top base-cards">
+      <h2 class="base-card__title"><a>International players</a></h2>
+
+
+      <p class="base-card__paragraph">We work with influential states, regional bodies, multilateral organizations, multi-stakeholder initiatives, and industry actors to develop international norms and standards.</p>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
+        <p>A strengthened EITI standard</p>
+      </div>
+
+      <div class="nrgi-impact-tag custom-tag">
+        <label class="highlights-button" for="modal_international" style="color: #ff5638;">LEARN MORE</label>
+      </div>
+
+    </div>
+    <div class="base-card__body padding-top base-cards">
+      <h2 class="base-card__title"><a>Maximization of benefits, reduction of harms</a></h2>
+
+
+      <p class="base-card__paragraph">Governments that, implement polices in line with good pratice and citizen priorities will likely increase benefits and reduce harms from the sector.</p>
+
+      <div class="nrgi-impact-tag custom-tag learn-more-maximization">
+        <label class="highlights-button" for="modal_maximization" style="color: #ff5638;">LEARN MORE</label>
+      </div>
+
+    </div>
   </div>
 </section>
 
