--- a/src/site/_includes/scripts.njk
+++ b/src/site/_includes/scripts.njk
@@ -1,6 +1,7 @@
 {% set js %}
   {# importing components #}
   {% include "js/inclusive-menu-button.js" %}
+  {% include "js/connected-cards.js" %}
   {% include "js/card.js" %}
   {% include "js/button.js" %}
   {% include "js/toggle.js" %}
