--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -49,8 +49,8 @@ layout: layouts/base.njk
 
   <div class="connected-lines__container">
     <div class="connected-lines__wrapper">
-      <div class="connected-lines-straight"></div>
-      <div class="connected-lines-straight float-right"></div>
+      <div class="connected-lines-straight line-right"></div>
+      <div class="connected-lines-straight line-left"></div>
       <div class="connected-lines line-top-left"></div>
       <div class="connected-lines line-top-right"></div>
       <div class="connected-lines line-bottom-left"></div>
@@ -79,8 +79,8 @@ layout: layouts/base.njk
         <p>Contract transparency in Mexico</p>
       </div>
 
-      <div class="connected-cards__img-bottom">
-        <img src="images/bring-change.jpg" alt="a">
+      <div class="connected-cards__img-top">
+        <img id="connected-cards-hover-top-left" src="images/bring-change.jpg" alt="a">
       </div>
     </div>
     <div class="base-card__body">
@@ -100,8 +100,8 @@ layout: layouts/base.njk
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
         <p>Contract transparency in Mexico</p>
       </div>
-      <div class="connected-cards__img-bottom">
-        <img src="images/bring-change.jpg" alt="a">
+      <div class="connected-cards__img-top">
+        <img id="connected-cards-hover-top-right" src="images/bring-change.jpg" alt="a">
       </div>
     </div>
   </div>
@@ -120,8 +120,8 @@ layout: layouts/base.njk
       </div>
 
 
-      <div class="connected-cards__img-top">
-        <img src="images/bring-change.jpg" alt="a">
+      <div class="connected-cards__img-bottom">
+        <img id="connected-cards-hover-bottom-left" src="images/bring-change.jpg" alt="a">
       </div>
     </div>
     <div class="base-card__body padding-top">
@@ -135,8 +135,8 @@ layout: layouts/base.njk
         <div class="cluster-box">"Corruption Risks"</div>
         <div class="cluster-box">"State capture by elites"</div>
       </div>
-      <div class="connected-cards__img-top">
-        <img src="images/bring-change.jpg" alt="a">
+      <div class="connected-cards__img-bottom">
+        <img id="connected-cards-hover-bottom-right" src="images/bring-change.jpg" alt="a">
       </div>
     </div>
   </div>
