--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -79,8 +79,10 @@ layout: layouts/base.njk
         <p>Contract transparency in Mexico</p>
       </div>
 
-      <div class="connected-cards__img-top">
-        <img id="connected-cards-hover-top-left" src="images/bring-change.jpg" alt="a">
+      <div class="connected-cards-img-top__container">
+        <div id="connected-cards-hover-top-left" class="connected-cards-img__wrapper">
+          <img src="/images/deal-icon.svg" alt="deal-icon">
+        </div>
       </div>
     </div>
     <div class="base-card__body">
@@ -100,8 +102,11 @@ layout: layouts/base.njk
         <div class="nrgi-impact-tag__tag"><span>NRGI</span><span>Impact</span></div>
         <p>Contract transparency in Mexico</p>
       </div>
-      <div class="connected-cards__img-top">
-        <img id="connected-cards-hover-top-right" src="images/bring-change.jpg" alt="a">
+
+      <div class="connected-cards-img-top__container">
+        <div id="connected-cards-hover-top-right" class="connected-cards-img__wrapper">
+          <img src="/images/revenues-icon.svg" alt="revenues-icon">
+        </div>
       </div>
     </div>
   </div>
@@ -119,9 +124,10 @@ layout: layouts/base.njk
         <div class="cluster-box">"Stranded assets"</div>
       </div>
 
-
-      <div class="connected-cards__img-bottom">
-        <img id="connected-cards-hover-bottom-left" src="images/bring-change.jpg" alt="a">
+      <div class="connected-cards-img-bottom__container">
+        <div id="connected-cards-hover-bottom-left" class="connected-cards-img__wrapper">
+          <img src="/images/energy-transition-icon.svg" alt="energy-transition-icon">
+        </div>
       </div>
     </div>
     <div class="base-card__body padding-top">
@@ -135,8 +141,11 @@ layout: layouts/base.njk
         <div class="cluster-box">"Corruption Risks"</div>
         <div class="cluster-box">"State capture by elites"</div>
       </div>
-      <div class="connected-cards__img-bottom">
-        <img id="connected-cards-hover-bottom-right" src="images/bring-change.jpg" alt="a">
+
+      <div class="connected-cards-img-bottom__container">
+        <div id="connected-cards-hover-bottom-right" class="connected-cards-img__wrapper">
+          <img src="/images/corruption-icon.svg" alt="corruption-icon">
+        </div>
       </div>
     </div>
   </div>
