--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -49,6 +49,9 @@ layout: layouts/base.njk
 
   <div class="connected-lines__container">
     <div class="connected-lines__wrapper">
+      <div class="between-lines-text">
+        <h1>Across these two areas, we will also address particular aspects of the energy transition and of corruption and "state capture".</h1>
+      </div>
       <div class="connected-lines-straight line-right"></div>
       <div class="connected-lines-straight line-left"></div>
       <div class="connected-lines line-top-left"></div>
