Ajustments in cards

--- a/src/site/_includes/postcss/connected-cards-components/_connected-cards.css
+++ b/src/site/_includes/postcss/connected-cards-components/_connected-cards.css
@@ -69,7 +69,7 @@
     margin: 0 90px;
 }
 
-.base-card__body.padding-top {
+.connected-cards__section .base-card__body.padding-top {
     padding-top: 90px;
 }
 
