--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -168,7 +168,7 @@ layout: layouts/base.njk
   </div>
 </section>
 
-<section class="base-section">
+<section class="base-section cards__section">
 
   <input type="checkbox" id="modal_multiple"/>
 
@@ -261,7 +261,7 @@ layout: layouts/base.njk
         <p>Resource Governance Index drives reform</p>
       </div>
 
-      <div class="nrgi-impact-tag custom-tag">
+      <div class="learn-more-tag">
         <label class="highlights-button" for="modal_multiple" style="color: #ff5638;">LEARN MORE</label>
       </div>
     </div>
@@ -277,7 +277,7 @@ layout: layouts/base.njk
         <p>Guinea's road improved mining governance</p>
       </div>
 
-      <div class="nrgi-impact-tag custom-tag">
+      <div class="learn-more-tag">
         <label class="highlights-button" for="modal_national" style="color: #ff5638;">LEARN MORE</label>
       </div>
 
@@ -296,7 +296,7 @@ layout: layouts/base.njk
         <p>A strengthened EITI standard</p>
       </div>
 
-      <div class="nrgi-impact-tag custom-tag">
+      <div class="learn-more-tag">
         <label class="highlights-button" for="modal_international" style="color: #ff5638;">LEARN MORE</label>
       </div>
 
@@ -307,7 +307,7 @@ layout: layouts/base.njk
 
       <p class="base-card__paragraph">Governments that, implement polices in line with good pratice and citizen priorities will likely increase benefits and reduce harms from the sector.</p>
 
-      <div class="nrgi-impact-tag custom-tag learn-more-maximization">
+      <div class="learn-more-tag">
         <label class="highlights-button" for="modal_maximization" style="color: #ff5638;">LEARN MORE</label>
       </div>
 
