--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -175,7 +175,7 @@ layout: layouts/base.njk
   <div class="modal">
     <div class="modal-content">
 
-      <label style="color: #ff5638; font-size: 30px">Multiple modes of engagement</label>
+      <label>Multiple modes of engagement</label>
 
       <p>NRGI is one many actors working in concert to advence natural resource governance. NGRI delivers applied research, data and analysis, policy advocacy, capacity development, and technical assistance, and serves as a convener of actors working toward reform.</p>
       <p>We focus those intervetions on specific areas of the extractive industries decision chain. Other actors undertake complementary work in development, rule of law and governance, and on other aspects of the  decision chain; their work suports and reinforces our  own.</p>
@@ -194,7 +194,7 @@ layout: layouts/base.njk
   <div class="modal">
     <div class="modal-content">
 
-      <label style="color: #ff5638; font-size: 30px">National players</label>
+      <label>National players</label>
 
       <p>At the national, NRGI partners with agents of change who are best placed to work in alliance to effect particular policy reforms.</p>
       <p>we address asymmetries of information, acess and capacity, and build trust between actors.</p>
@@ -215,7 +215,7 @@ layout: layouts/base.njk
   <div class="modal">
     <div class="modal-content">
 
-      <label style="color: #ff5638; font-size: 30px">International players</label>
+      <label>International players</label>
 
       <p>At the international level, NRGI engages external influencers which are predisposed to receive and adopt NRGI's evidence-based messaging.</p>
       <p>We work with influential states, regional bodies, multilateral organizations, multi-stakeholder iniatives, and industry actors to develop international norms and standards.</p>
@@ -235,7 +235,7 @@ layout: layouts/base.njk
   <div class="modal">
     <div class="modal-content">
 
-      <label style="color: #ff5638; font-size: 30px">Maximization of benefits, reduction of harms</label>
+      <label>Maximization of benefits, reduction of harms</label>
 
       <p>Governments that implement policies in line with good practice and citizen prioritie will likely increase benefits and reduce harms from the sector.</p>
       <p>Benefits include the availability of revenues for public services and social spending, helping to lift citizens out of poverty, as well increased dialogue and accountability. Harms include the direct impacts of extraction (e.g., corruption, conflict and social and environmental effects), growing inequality, and negative gender-differentiated impacts.</p>
