--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -83,7 +83,7 @@ layout: layouts/base.njk
       </div>
 
       <div class="connected-cards-img-top__container">
-        <div id="connected-cards-hover-top-left" class="connected-cards-img__wrapper">
+        <div id="connected-cards-hover-top-left" class="connected-cards-img__wrapper pulse">
           <img src="/images/deal-icon.svg" alt="deal-icon">
         </div>
       </div>
@@ -107,7 +107,7 @@ layout: layouts/base.njk
       </div>
 
       <div class="connected-cards-img-top__container">
-        <div id="connected-cards-hover-top-right" class="connected-cards-img__wrapper">
+        <div id="connected-cards-hover-top-right" class="connected-cards-img__wrapper pulse">
           <img src="/images/revenues-icon.svg" alt="revenues-icon">
         </div>
       </div>
